# benchbro

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: StatusBadge.tsx
frontend/src/pages/: History.tsx  Home.tsx  NewEval.tsx  Results.tsx
src/benchbro/: __init__.py  __main__.py  app.py  cli.py  config.py
src/benchbro/adapters/: base.py  detection.py  ollama.py  openai_compat.py
src/benchbro/api/: routes_benchmarks.py  routes_models.py  routes_sessions.py
src/benchbro/benchmarks/: base.py  gsm8k.py  humaneval.py  mmlu_pro.py  perplexity.py
src/benchbro/db/: queries.py  schema.py
src/benchbro/runner/: engine.py
src/benchbro/static/: index.html
src/benchbro/static/assets/: index-4ARSDzgP.js  index-BMcIdeJV.css  index-C1oqX2B5.js  index-Dk7I5Lvs.js  index-eIXdbLEY.css  index-l0d9znC7.css
tests/: conftest.py  test_adapters.py  test_api.py  test_benchmarks.py  test_db.py  test_runner.py
