[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "benchbro"
version = "0.1.0"
description = "Local LLM benchmarking with a friendly web UI"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "aiosqlite>=0.20.0",
    "httpx>=0.27.0",
    "numpy>=1.26.0",
    "datasets>=2.20.0",
    "websockets>=12.0",
]

[project.scripts]
benchbro = "benchbro.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/benchbro"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
    "pytest-httpx>=0.30.0",
    "asgi-lifespan>=2.1.0",
    "ruff>=0.4.0",
]
